apps/wyoming/whisper/the-intersect/lb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whisper-lb
  namespace: wyoming
  labels:
    app: whisper
    service: whisper-lb
spec:
  type: LoadBalancer
  selector:
    app: whisper
  ports:
    - name: whisper
      port: 10300
      protocol: TCP
      targetPort: 10300
  sessionAffinity: None
